--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "element-ui": "^2.15.8",
     "js-cookie": "^2.2.1",
     "mavon-editor": "^2.9.1",
+    "module": "^1.2.5",
     "save-dev": "0.0.1-security",
+    "serve": "^13.0.2",
     "tocbot": "^4.12.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
