--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-plugin-component": "^1.1.1",
-    "compression-webpack-plugin": "^8.0.1",
+    "compression-webpack-plugin": "^6.1.1",
+    "image-webpack-loader": "^8.1.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "qs": "^6.10.3",
