--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "element-ui": "^2.15.8",
     "echarts": "^5.4.1",
+    "element-ui": "^2.15.8",
     "js-cookie": "^2.2.1",
     "marked": "^4.2.5",
     "mavon-editor": "^2.9.1",
@@ -34,6 +34,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/runtime-dom": "^3.2.45",
     "babel-plugin-component": "^1.1.1",
     "compression-webpack-plugin": "^6.1.1",
     "image-webpack-loader": "^8.1.0",
